css/restaurant-flora-stylesheet.css
* {
    box-sizing: inherit;
}
html {
    -webkit-text-size-adjust: 100%;
    background-color: #fefefb;
}
body {
    font-size: 14px;
    margin: 0px;
    /*background-color: #fefefb; /* This color or #fefefb or even f2f2f2*/
    font-family: 'Times New Roman', Times, serif;
}
div#container {
    width: 940px;
    margin: auto;
    text-align: left;
}
nav#pri-nav {
    float: left;
    margin-right: 45px;
    margin-top: 25px;
    width: 110px;
}
nav#sec-nav {
    position: absolute;
    top: 550px;
    clear: both;
    padding: 20px 0 0 0;
}
#clearfix {
    display: inline-block;
    width: 850px;
    position: absolute;
}
header {
    height: 93px;
    margin-top: 42px;
}
h1 {
    position: relative;
    font-size: 25px;
    font-weight: normal;
    margin: 0;
    margin-left: 25px;
}
a {
    color: black;
    text-decoration: none;
}
div#content {
    float: left;
    width: 460px;
    margin: 0 20px 30px 20px;
    position: relative;
    padding-bottom: 70px;
}
footer {
    position: absolute;
    right: 0px;
    bottom: 20px;
    margin-top: 10px;
}
.link-ls {
    margin: 0;
    padding: 0;
}
li.inline {
    display: inline-block;
}
#lang-sel-ls {
    position: absolute;
    right: 0px;
    top: 35px;
    margin: 0px;
}
#lang-sel-options span:before {
    content: "| " !important;
}
#pri-menu {
    font-size: 19px;
}
::marker {
    content: none;
}
.fa {
    padding: 5px;
    font-size: 40px;
    width: 15px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
  }
  .fa:hover {
    opacity: 0.7;
  }
  .fa-facebook {
    background: #3B5998;
    color: white;
    margin-right: 5px;
  }
  .fa-instagram {
    background: #cd486b;
    color: white;
  }

